--- a/app/styles/_widgets.scss
+++ b/app/styles/_widgets.scss
@@ -25,8 +25,18 @@ a, a:hover, a:visited {
   
   .widget-content{
     .wrapper{
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+
+      #inputs{
+        height: 100%;
+      }
+
       table{
         width: 100%;
+        margin-bottom: 0px;
       }
       
       .title{
@@ -87,6 +97,13 @@ a, a:hover, a:visited {
 
 .front{
   overflow: auto;
+  display: table;
+  table-layout: fixed;
+
+  .widget-content{
+    display: table-row;
+    height: 100%;
+  }
 }
 
 .back{
@@ -175,10 +192,10 @@ handle, .clickable{
   .loading{
     position: absolute;
     top: 50%;
-    left: 0;
-    right: 0;
+    width: 100%;
     text-align: center;
     font-weight: bold;
+    margin-top: -7px;
   }
 }
 
